=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.09 - In development

=over

=item *

Upgraded L<Apache::Session> and changed our usage to not require
an exclusive lock for every request. [Michael Peters]

=item *

Added the F<bin/krang_generate_csv> script. [Michael Peters]

=item *

We now generate higher quality thumbnails and there were a couple of
places (like "Select Media") where thumbnails weren't showing up when
they should have. [Michael Peters]

=item * 

Added new C<command_column_extra_args> option to L<Krang::HTMLPager>
so that more arguments can be passed into the C<command_column_commands>
besides just the id. [Michael Peters]

=item *

Added C<read_only> flag to Media and Template objects. This flag
can only be set by the F<bin/krang_read_only> admin script so that these
items can't be set/unset by users. [Michael Peters]

=item *

Added C<--category-links> option to F<bin/krang_create_story>
script. [Michael Peters]

=item *

Media Bulk Upload can set a max height and/or max width to scale down
large images. [Brad Oaks]

=item *

Added C<Krang.Form.get_form()> method to make it easier to get the
form in custom Javascript code. [Michael Peters]

=item *

Added C<update> (which defaults to C<true>) option to C<Krang.Form.submit()>
to make it easier for addons to create forms which submit and return JSON data. [Michael Peters]

=item *

Added ability to search Media by C<Type> (which is C<media_type_id>). [Brad Oaks]

=item *

Fixed ISE that occurs on the Back button when viewing an older version of a template that you have checked out.
It only happened when starting from Workspace and editing a template.  The form action was set to workspace.pl
instead of template.pl in that case.  [Brad Oaks]

=back

=head2 3.08 - December 20, 2009

=over

=item *

Media items now call the element's C<retire_hook>. [Michael Peters]

=item *

Added C<may_view_trash> permission. [Michael Peters]

=item *
