@@ -6,6 +6,7 @@ missing_slug              "Slug requires a value for this story type because it 
 missing_category          "Site / Category requires a value."
 bad_category              "Invalid Site / Category. $explanation"
 missing_cover_date        "Cover Date requires values for date (MM/DD/YYYY) and time (HH:MM PM)."
+invalid_cover_date        "Cover Date must have a date in the format \"MM/DD/YYYY\" and time in the format \"HH:MM PM\""
 no_slug_no_cat_idx        "Story must either have a Slug or be a Category Index."
 no_categories_for_chooser "No Sites are defined.  You must add a Site before you can create stories, media and templates."
 
